Fixed alignment for right panel.

--- a/cloud-to-cloud-network-test/frontend/src/app/dashboard/dashboard.component.scss
+++ b/cloud-to-cloud-network-test/frontend/src/app/dashboard/dashboard.component.scss
@@ -496,11 +496,11 @@ a:focus, a:hover {
 }
 
 .height-170 {
-	height: 170px;
+	height: 171px;
 }
 
 .height-162 {
-	height: 162px;
+	height: 164px;
 }
 
 .destination-tab {
